# autodiscovery-sources

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALLATION.md  MICROSERVICIO.md  Makefile  README.md  discovered_files.json  docker-compose.yml  pyproject.toml  series_data_full.json  series_last_summary.json
contracts/: sources.yml
docs/: COMO_BUSCA_LINKS.md
scripts/: extract_last_values.py  extract_series_ids.py  filter_recent_series.py  query_specific_series.py
src/: __init__.py
src/autodiscovery/: __init__.py  cli.py  client.py  config.py  hashutil.py  html.py  http.py
src/autodiscovery/application/: __init__.py
src/autodiscovery/application/factories/: __init__.py
src/autodiscovery/application/services/: contract_service.py  discovery_service.py  link_crawler_service.py  pattern_matcher_service.py  url_filter_service.py  validation_service.py
src/autodiscovery/application/usecases/: __init__.py  discover_all_links_use_case.py  discover_source_use_case.py  helpers.py  validate_source_use_case.py
src/autodiscovery/domain/: __init__.py  entities.py  errors.py  interfaces.py  policies.py  value_objects.py
src/autodiscovery/domain/interfaces/: __init__.py  contracts_port.py  discoverer_factory_port.py  html_port.py  http_port.py  mirror_port.py  registry_port.py  source_discoverer_port.py
src/autodiscovery/infrastructure/: __init__.py  contract_repository.py  discoverer_factory.py  file_validator.py  html_parser.py  mirror_service.py  registry_repository.py  validation_rules.py
src/autodiscovery/mirror/: __init__.py  fs.py  s3.py
src/autodiscovery/rules/: __init__.py  discontinuities.py  validation.py
src/autodiscovery/sources/: __init__.py  base.py  bcra_infomodia.py  bcra_rem.py  bcra_series.py  indec_emae.py
src/autodiscovery/util/: __init__.py  date.py  fsx.py
src/autodiscovery_sources/: __init__.py
src/autodiscovery_sources/cli/: __init__.py  app.py
src/autodiscovery_sources/domain/: __init__.py  entities.py  errors.py  value_objects.py
src/autodiscovery_sources/engine/: __init__.py  crawler.py  ranker.py  selector.py  validator.py  versioning.py
src/autodiscovery_sources/infrastructure/: __init__.py  bs4_adapter.py  clock_adapter.py  contracts_yaml_adapter.py  hashing.py  httpx_adapter.py  logger_structlog_adapter.py  metrics_memory_adapter.py  mirror_fs_adapter.py  mirror_s3_adapter.py  registry_fs_adapter.py  urltools.py
src/autodiscovery_sources/interfaces/: __init__.py  clock_port.py  contracts_port.py  html_port.py  http_port.py  logger_port.py  metrics_port.py  mirror_port.py  registry_port.py
src/autodiscovery_sources/usecases/: __init__.py  discover_source.py  show_registry.py  sync_all.py
src/cli/: app.py
src/domain/: policies.py
tests/: __init__.py  conftest.py  test_autodiscovery.py  test_contract_repository.py  test_contract_service.py  test_contracts_loading.py  test_crawler_prefilter.py  test_discoverer_factory.py  test_discovery_service.py  test_file_validator.py  test_ranking_and_selection.py  test_registry_atomic.py  test_registry_repository.py  test_use_cases.py  test_validation_service.py  test_validator_head_get_fallback.py  test_versioning_policies.py
